--- a/res/layout/meeting.xml
+++ b/res/layout/meeting.xml
@@ -12,34 +12,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="10dip"
-        android:text="@string/verse" />
-
-    <TextView
-        android:id="@+id/TextView2"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/TextView1"
-        android:layout_marginTop="10dip"
-        android:text="@string/what" />
-
-    <TextView
-        android:id="@+id/TextView3"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/TextView2"
-        android:layout_marginTop="10dip"
-        android:text="@string/where" />
-
-    <TextView
-        android:id="@+id/TextView4"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/TextView3"
-        android:layout_marginTop="10dip"
-        android:text="@string/when" />
+        android:text="@string/meeting" />
 
     <LinearLayout
         android:layout_width="fill_parent"
