--- a/res/layout/meeting.xml
+++ b/res/layout/meeting.xml
@@ -21,13 +21,20 @@
         android:background="@color/headfirst"
         android:padding="5dp"
         android:gravity="center" >
-
+        
         <Button
             android:id="@+id/Button1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"            
-            android:onClick="onClick"
+            android:onClick="onCallLandlineClick"
             android:text="@string/button_one" />
+
+        <Button
+            android:id="@+id/Button2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"            
+            android:onClick="onShowMapClick"
+            android:text="@string/button_two" />
     </LinearLayout>
 
 </RelativeLayout>
