--- a/res/layout/jft_reading.xml
+++ b/res/layout/jft_reading.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical" >
 
     <WebView
-        android:id="@+id/webkit1"
+        android:id="@+id/webkit"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
 
