--- a/res/layout/main_fragment.xml
+++ b/res/layout/main_fragment.xml
@@ -7,7 +7,7 @@
     >
 <TextView
     android:id="@+id/contact_name"
-    android:text="Vanni"
+    android:text="@string/contact_sponsor"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentTop="true"
@@ -22,7 +22,6 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="5dp"
     android:textSize="10dp"
-    android:text="111-222-3333"
     android:layout_below="@+id/contact_name"
     android:layout_alignLeft="@+id/contact_name"
     />
