--- a/assets/www/android.css
+++ b/assets/www/android.css
@@ -1,9 +1,27 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta name="viewport" content="user-scalable=no, width=device-width" />
-    <style type="text/css">
-      .myButton {
+body {
+        background-color: white;
+        color: #222;
+        font-family: Helvetica;
+        font-size: 14px;
+        margin: 0;
+        padding: 0;
+}
+.container {
+        border-radius: 1em;
+        position: absolute;
+        top: 25%;
+        left: 5%;
+}
+.container p {
+        color: gray;
+        font-size: 16pt;
+        text-align: left;
+        margin: 10px;
+}
+.container span {
+        margin-left: 25%;
+}
+.myButton {
 	-moz-box-shadow: 0px 10px 14px -7px #276873;
 	-webkit-box-shadow: 0px 10px 14px -7px #276873;
 	box-shadow: 0px 10px 14px -7px #276873;
@@ -15,9 +33,9 @@
 	background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#599bb3', endColorstr='#408c99',GradientType=0);
 	background-color:#599bb3;
-	-moz-border-radius:8px;
-	-webkit-border-radius:8px;
-	border-radius:8px;
+	-moz-border-radius:18px;
+	-webkit-border-radius:18px;
+	border-radius:18px;
 	display:inline-block;
 	cursor:pointer;
 	color:#ffffff;
@@ -27,8 +45,8 @@
 	padding:13px 32px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #3d768a;
-      }
-      .myButton:hover {
+}
+.myButton:hover {
 	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #408c99), color-stop(1, #599bb3));
 	background:-moz-linear-gradient(top, #408c99 5%, #599bb3 100%);
 	background:-webkit-linear-gradient(top, #408c99 5%, #599bb3 100%);
@@ -37,38 +55,9 @@
 	background:linear-gradient(to bottom, #408c99 5%, #599bb3 100%);
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#408c99', endColorstr='#599bb3',GradientType=0);
 	background-color:#408c99;
-      }
-      .myButton:active {
+}
+.myButton:active {
 	position:relative;
 	top:1px;
-      }
-      .container {
-        background: white;
-        color: gray;
-        border-radius: 1em;
-        padding: 1em;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        margin-right: -50%;
-        transform: translate(-50%, -50%)
-      }
-      .container span {
-        margin-left: 30%;
-      }
-      .container p {
-        font-size: 16pt;
-        text-align: left;
-      }
-    </style>
-    <title>No network connection</title>
-  </head>
-  <body>
-    <div class="container">
-      <p>No network found. Please retry or check your network settings.</p>
-      <span>
-        <a href="#" class="myButton">RETRY</a>
-      </span>
-    </div>
-  </body>
-</html>
+}
+
