--- a/assets/www/desktop.css
+++ b/assets/www/desktop.css
@@ -15,13 +15,16 @@ body {
         margin-right: -50%;
         transform: translate(-50%, -50%)
 }
-.container span {
-        margin-left: 30%;
-}
 .container p {
         color: gray;
         font-size: 16pt;
         text-align: left;
+        margin: 10px;
+}
+.container a {
+        position: relative;
+        left: 50%;
+        margin-left: -75px;
 }
 .myButton {
 	-moz-box-shadow: 0px 10px 14px -7px #276873;
@@ -35,9 +38,9 @@ body {
 	background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#599bb3', endColorstr='#408c99',GradientType=0);
 	background-color:#599bb3;
-	-moz-border-radius:8px;
-	-webkit-border-radius:8px;
-	border-radius:8px;
+	-moz-border-radius:18px;
+	-webkit-border-radius:18px;
+	border-radius:18px;
 	display:inline-block;
 	cursor:pointer;
 	color:#ffffff;
@@ -48,7 +51,7 @@ body {
 	text-decoration:none;
 	text-shadow:0px 1px 0px #3d768a;
 }
-      .myButton:hover {
+.myButton:hover {
 	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #408c99), color-stop(1, #599bb3));
 	background:-moz-linear-gradient(top, #408c99 5%, #599bb3 100%);
 	background:-webkit-linear-gradient(top, #408c99 5%, #599bb3 100%);
