--- a/res/drawable-hdpi/button_search.xml
+++ b/res/drawable-hdpi/button_search.xml
@@ -2,10 +2,10 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 <item
     android:state_pressed="false"
-    android:drawable="@drawable/update_btn"
+    android:drawable="@drawable/search"
     />
 <item
     android:state_pressed="true"
-    android:drawable="@drawable/update_btn_pressed"
+    android:drawable="@drawable/search_pressed"
     />
 </selector>
